# sbel-reproducibility

./: .gitignore  README.md
2023/Unjhawala-IEEE-ExpressiveVM/VM/interfaces/: CMakeLists.txt  rom.i  test8dof.py  test8dof_ART.py
2025/ASME-LinearSolversGPU/: .gitattributes  CMakeLists.txt  README.md  task_cudss.cpp  task_pardiso.cpp  utils.h
2026/chrono-code/: .env.example  .gitignore  README.md  environment.yml  pyproject.toml
2026/chrono-code/chrono_agent/: __init__.py  config.py  main.py
2026/chrono-code/chrono_agent/agents/: __init__.py  base.py  code_generation_agent.py  exceptions.py  execution_agent.py  planning_agent.py  planning_pipeline.py  review_agent.py  skill_query_agent.py  skill_router_agent.py
2026/chrono-code/chrono_agent/agents/prompts/: __init__.py  codegen_prompts.py  execution_prompts.py  planning_prompts.py  review_prompts.py
2026/chrono-code/chrono_agent/models/: __init__.py  clarification.py  code.py  error_context.py  execution.py  plan.py  plan_markdown_parser.py  thinking.py  user_spec.py
2026/chrono-code/chrono_agent/skills/: .skill_index.json  __init__.py  base.py  index_builder.py  loader.py  registry.py
2026/chrono-code/chrono_agent/skills/core/fsi_in_scene/: SKILL.md
2026/chrono-code/chrono_agent/skills/core/mbs/: SKILL.md
2026/chrono-code/chrono_agent/skills/core/mbs_in_scene/: SKILL.md
2026/chrono-code/chrono_agent/skills/core/scene/: SKILL.md
2026/chrono-code/chrono_agent/skills/fsi/sph/: SKILL.md
2026/chrono-code/chrono_agent/skills/mbs/body_creation/: SKILL.md
2026/chrono-code/chrono_agent/skills/mbs/collision/: SKILL.md
2026/chrono-code/chrono_agent/skills/mbs/simulation_loop/: SKILL.md
2026/chrono-code/chrono_agent/skills/mbs/system_create/: SKILL.md
2026/chrono-code/chrono_agent/skills/planning/asset_discovery/: SKILL.md
2026/chrono-code/chrono_agent/skills/planning/image_grounding/: SKILL.md
2026/chrono-code/chrono_agent/skills/planning/plan_format/: SKILL.md
2026/chrono-code/chrono_agent/skills/planning/scene_coordinate_system/: SKILL.md
2026/chrono-code/chrono_agent/skills/robot/go2_quadruped/: SKILL.md
2026/chrono-code/chrono_agent/skills/scene/custom_assets_scene_convex_decomp/: SKILL.md
2026/chrono-code/chrono_agent/skills/sens/camera/: SKILL.md
2026/chrono-code/chrono_agent/skills/sens/sensor_manager/: SKILL.md
2026/chrono-code/chrono_agent/skills/veh/driver/: SKILL.md
2026/chrono-code/chrono_agent/skills/veh/wheeled_vehicle/: SKILL.md
2026/chrono-code/chrono_agent/skills/vsg/: SKILL.md
2026/chrono-code/chrono_agent/tools/: __init__.py  api_rag.py  claude_code_tools.py  code_agent_tools.py  embeddings.py  file_explorer_tools.py  signature_injector.py
2026/chrono-code/chrono_agent/ui/: __init__.py  renderer.py
2026/chrono-code/chrono_agent/utils/: __init__.py  _signature_digest.py  dialog_manager.py  diff_utils.py  display_server.py  frame_capture.py  fsi_assets.py  logger.py  response_parser.py  scene_placement.py  sensor_camera.py  simulation_loop.py  slash_commands.py  terminal_ui.py  textual_tui.py  vehicle_geometry.py  vsg_recording.py
2026/chrono-code/chrono_agent/validators/: __init__.py  body_classification.py  scene_placement.py  utils_call_validator.py
2026/chrono-code/chrono_agent/workflow/: __init__.py  conditions.py  engine.py  events.py  nodes.py  state.py
2026/chrono-code/chrono_code/: __init__.py  config.py  main.py
2026/chrono-code/chrono_code/agents/: __init__.py  base.py  code_generation_agent.py  execution_agent.py  planning_agent.py  planning_pipeline.py  review_agent.py  skill_query_agent.py  skill_router_agent.py
2026/chrono-code/chrono_code/agents/prompts/: __init__.py  codegen_prompts.py
2026/chrono-code/chrono_code/models/: __init__.py  clarification.py  error_context.py  handoff.py  plan.py  plan_parser.py  review.py
2026/chrono-code/chrono_code/skills/: .skill_index.json  __init__.py  base.py  index_builder.py  registry.py
2026/chrono-code/chrono_code/skills/core/fsi_in_scene/: SKILL.md
2026/chrono-code/chrono_code/skills/core/mbs_in_scene/: SKILL.md
2026/chrono-code/chrono_code/skills/core/scene/: SKILL.md
2026/chrono-code/chrono_code/skills/fsi/sph/: SKILL.md
2026/chrono-code/chrono_code/skills/geometry/scene_relations/: SKILL.md
2026/chrono-code/chrono_code/skills/mbs/fea/: SKILL.md
2026/chrono-code/chrono_code/skills/mbs/quaternions/: SKILL.md
2026/chrono-code/chrono_code/skills/mbs/system_create/: SKILL.md
2026/chrono-code/chrono_code/skills/mbs/topology/: SKILL.md
2026/chrono-code/chrono_code/skills/planning/asset_discovery/: SKILL.md
2026/chrono-code/chrono_code/skills/planning/plan_format/: SKILL.md
2026/chrono-code/chrono_code/skills/planning/scene_coordinate_system/: SKILL.md
2026/chrono-code/chrono_code/skills/robot/go2_quadruped/: SKILL.md
2026/chrono-code/chrono_code/skills/sens/camera/: SKILL.md
2026/chrono-code/chrono_code/skills/vsg/: SKILL.md
2026/chrono-code/chrono_code/tools/: __init__.py  api_rag.py  claude_code_tools.py  code_agent_tools.py  embeddings.py  file_explorer_tools.py  signature_injector.py
2026/chrono-code/chrono_code/ui/: __init__.py  renderer.py
2026/chrono-code/chrono_code/utils/: __init__.py  _signature_digest.py  async_fs.py  dialog_manager.py  display_server.py  error_utils.py  logger.py  scene_assets.py  scene_placement.py  sensor_camera.py  simulation_loop.py  slash_commands.py  terminal_ui.py  textual_tui.py  vehicle_geometry.py  vsg_title.py
2026/chrono-code/chrono_code/validators/: __init__.py  scene_placement.py  utils_call_validator.py
2026/chrono-code/chrono_code/workflow/: conditions.py  engine.py  nodes.py
2026/chrono-code/dialog/: index.json
2026/chrono-code/dialog/sessions/session_20260520_203153/: summary.json
2026/chrono-code/prompts/assets_robot/: prompt.md
2026/chrono-code/prompts/custom_assets_scene/: prompt.md
2026/chrono-code/prompts/demo_SEN_HMMWV_offroad_vsg/: prompt.md
2026/chrono-code/prompts/veh_fsi_floating/: prompt.md
2026/chrono-code/scripts/: build_api_index.py  extract_pychrono_api.py  validate_chrono_apis.py
(+2908 files in other folders)
